fixed alignement

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -124,6 +124,7 @@ strong {
 
 .big {
   height: 20px;
+  margin-top: 18px;
 }
 
 .dashboard-link {
